derive/tests/snapshots/non_unique_single_column_index/Membership/get_all_memberships.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `membership` table.
    pub fn get_all_memberships<'a>(&'a self) -> impl Iterator<Item = Membership> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().membership().iter()
    }
}
