derive/tests/snapshots/non_unique_single_column_index/Membership/update_membership_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Membership` row of the `membership` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_membership_by_id<'a>(
        &'a self,
        membership: Membership,
    ) -> Result<Membership, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut membership = membership;
        let membership = self.db().membership().id().update(membership);
        Ok(membership)
    }
}
